--- a/src/app/home/login/login.component.css
+++ b/src/app/home/login/login.component.css
@@ -1,4 +1,3 @@
-
 body {
     margin: 0;
     padding: 0;
@@ -7,8 +6,6 @@ body {
 form {
     background-color: white;
     border-radius: 1rem;
-    margin-top: 25%;
-    
 }
 #logo {
     width: 85%;
@@ -34,9 +31,10 @@ form {
     margin-bottom: 2rem;
 }
 #formulario {
+    margin-top: 25%;
     margin-left: auto;
     margin-right: auto;
-    width: 300px;
+    width: 230px;
     max-width: 90%;
     padding: 2rem;
 }
@@ -57,15 +55,13 @@ footer {
     padding: 1rem;
 }
 /* BREAKPOINTS */
-/* @media screen and (max-width: 600px) {
-    form {
-        margin-top: 19%;
-        margin-bottom: 19%;
+@media screen and (max-width: 600px) {
+    #formulario {
+        margin-top: 17%;
     }
 }
 @media screen and (min-width: 992px) {
-    form {
-        margin-top: 8%;
-        margin-bottom: 8%;
+    #formulario {
+        margin-top: 12%;
     }
-} */
+}
