--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -3,13 +3,13 @@
       [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
       [mode]="(isHandset$ | async) ? 'over' : 'side'"
       [opened]="(isHandset$ | async) === false">
-    <mat-toolbar>Menu</mat-toolbar>
+    <mat-toolbar><a href="#"><img style="width: 100%;" src="../../assets/logo.png"></a></mat-toolbar>
     <mat-nav-list>
       <a href="#">
         <mat-list-item id="sair">Sair</mat-list-item>
     </a>
     <a href="/invoices">
-        <mat-list-item id="invoices">WE_invoices</mat-list-item>
+        <mat-list-item id="invoices">Faturamentos</mat-list-item>
     </a>
     <a href="/clientes">
         <mat-list-item id="clientes">Consulta de Clientes</mat-list-item>
@@ -17,17 +17,18 @@
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
-    <mat-toolbar color="primary">
+    <mat-toolbar style="background-color: black">
       <button
         type="button"
         aria-label="Toggle sidenav"
         mat-icon-button
         (click)="drawer.toggle()"
         *ngIf="isHandset$ | async">
-        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+        <mat-icon style="color: white" aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>Wise-ERP</span>
+      <span style="color: white;">Wise ERP</span>
     </mat-toolbar>
     <!-- Add Content Here -->
+    <app-invoices></app-invoices>
   </mat-sidenav-content>
 </mat-sidenav-container>
